terraform/lab/k8s/manifests/06-traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: LoadBalancer
  loadBalancerIP: 10.4.1.88
  allocateLoadBalancerNodePorts: true
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: websecure
      port: 443
      targetPort: websecure
    - name: admin
      port: 8080
      targetPort: admin
