terraform/lab/k8s/manifests/10-traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: dashboard.k8s.alcachofa.faith
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
